--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -5,6 +5,7 @@
 
 </section>
 <section class="services">
+  <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
   <%= info_card(
           "Partial House Cleaning",
           asset_path("card3.jpg"),
